# infotaxis_ros

./: CMakeLists.txt  package.xml
include/: gsl_algorithm.h  gsl_infotaxis.h  gsl_server.h  visual_cpt.h
launch/: find_source.launch
params/: params.yaml
src/: gsl_algorithm.cpp  gsl_infotaxis.cpp  gsl_server.cpp  gsl_server_call.cpp  visual_cpt.cpp
