<?xml version="1.0"?>
<package>
  <name>infotaxis</name>
  <version>0.0.1</version>
  <description>Gas Source Localizaton ActionServer using infotaxis</description>

  <!-- This package is inspried by Pepe Ojeda; email="ojedamorala@uma.es"-->
  
  <maintainer email="luong.d.aa@m.titech.ac.jp">Nhat Luong</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>move_base</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>tf</run_depend>
</package>